--- a/src/app/componentes/categoria-form/categoria-form.component.html
+++ b/src/app/componentes/categoria-form/categoria-form.component.html
@@ -6,7 +6,7 @@
       <div fxLayout="column" fxLayoutGap="10px" class="container">
 
         <mat-card>
-          <mat-card-title>Catalogos</mat-card-title>
+          <mat-card-title>Categorias</mat-card-title>
           <mat-card-subtitle>{{_accion_desc }}  </mat-card-subtitle>
           <mat-divider ></mat-divider>
 
@@ -15,7 +15,7 @@
 
               <mat-form-field class="example-25-width" appearance="fill"  >
                 <mat-label>Codigo</mat-label>
-                <input matInput formControlName="id">
+                <input matInput formControlName="id" readonly>
               </mat-form-field>
 
               <mat-form-field class="example-75-width" appearance="fill"  >
