prueba de un commit nuevo

--- a/src/app/componentes/categoria/categoria.component.html
+++ b/src/app/componentes/categoria/categoria.component.html
@@ -5,7 +5,7 @@
   <div fxFlex="60" fxLayoutAlign="start start">
     <div fxLayout="column" fxLayoutGap="10px" fxFlex="80">
     <mat-card>
-      <mat-card-title>Catalogos</mat-card-title>
+      <mat-card-title>Categorias</mat-card-title>
       <mat-card-subtitle>Listado</mat-card-subtitle>
       <mat-divider ></mat-divider>
       <div fxLayout="row" fxLayoutGap="10px" fxLayout.sm="column" style="margin-top: 5%;">
